Auto docs storybook, create template

--- a/.storybook/DocumentationTemplate.mdx
+++ b/.storybook/DocumentationTemplate.mdx
@@ -1,8 +1,6 @@
 import {  Meta, Primary, Title, Description, Subtitle, Controls} from '@storybook/blocks'
 
-import * as Button from "./Button.stories.tsx";
-
-<Meta of={Button} title="Button" />
+<Meta isTemplate />
 
 <Title />
 <Subtitle>Components</Subtitle>
